--- a/index.html
+++ b/index.html
@@ -6,10 +6,46 @@
   <link rel="SHORTCUT ICON" href="//host.imguol.com/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="format-detection" content="telephone=no">
+  <link href="css/style.css" rel="stylesheet">
   <link href="//jsuol.com.br/g/uolfw/1.7.3/css/UOLfw.min.css" rel="stylesheet">
   <link href="//jsuol.com.br/g/uolfw/fonts/uol-text.css?type=light,lighter,bold," rel="stylesheet">
 </head>
-<body>
+<body class="container-fluid">
+  <div class="row">
+    <header class="col-md-12" id="topo">
+      <img src="//host.imguol.com/favicon.ico" />
+        <p><strong>UOL</strong> esporte clube</p>
+    </header>
+  </div>
+
+    <div class="row" id="corpo">
+      <div class="col-md-12">
+      <img src="imagens/bg-top.jpg" />
+      </div>
+    </div> 
+
+    <div class="row" id="itens">
+      <div class="col-md-4">
+        <img src="imagens/logoseta.jpeg" alt="Primeiro logo">
+        <p id="text">Conteúdo disponível a qualquer hora e onde estiver</p>
+      </div>
+      <div class="col-md-4">
+        <img src="imagens/bolaFutebolAmericano.jpeg" alt="Segundo logo - bola de futebol americano" id="bola">
+        <p id="text">Acesso simultâneo em até três dispositivos</p>
+      </div>
+      <div class="col-md-4">
+        <img src="imagens/desktop.jpeg" alt="Terceiro logo - desktop" id="desktop">
+        <p id="last-text">Assista no seu celular, tablet e computador</p>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-12">
+        <h2> No UOL Esporte Clube você tem:</h2>
+      </div>
+    </div>
+
+
 
 	<script src="https://jsuol.com.br/g/jquery/2.1.3/jquery-2.1.3.min.js"></script>
 	<script src="https://jsuol.com.br/g/uolfw/1.7.3/js/UOLfw.min.js"></script>	
