--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
       </div>
     </div>
 
+    <div class="row" id="footer">
+      <div class="col-md-12"></div>
+    </div>
+
 
 
 	<script src="https://jsuol.com.br/g/jquery/2.1.3/jquery-2.1.3.min.js"></script>
