adicionando mais detalhes ao footer

--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@
     </div>
 
     <div class="row" id="footer">
-      <div class="col-md-12"></div>
+      <div class="col-md-12">
+        <img src="imagens/logoUol.jpeg" alt="logo footer" />
+        <p>°1998 - 2018 - UOL - O melhor conteúdo. Todos os direitos reservados.</p>
+      </div>
     </div>
 
 
