adicionando os itens que faltavam no footer

--- a/index.html
+++ b/index.html
@@ -49,6 +49,14 @@
       <div class="col-md-12">
         <img src="imagens/logoUol.jpeg" alt="logo footer" />
         <p>°1998 - 2018 - UOL - O melhor conteúdo. Todos os direitos reservados.</p>
+        <p id="line">_________________________________________________________________________________</p>
+        <p id="text-footer"> UNIVERSO ONLINE S/A</p>
+        <p id="secondText-footer">CNPJ/MF 01.109.184/0001-95</p>
+        <p id="thirdText-footer">Av. Brigadeiro Faria Lima, 1304, São Paulo/SP</p>
+        <p id="lastText-footer">CEP: 01452-02</p>
+        <br>
+        <a href="https://www.uol.com.br/sac" target="_blank"> >> uol.com.br/sac</a>
+
       </div>
     </div>
 
