--- a/emailMkt/index.html
+++ b/emailMkt/index.html
@@ -3,6 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap" rel="stylesheet">
+    <meta content="width=device-width, initial-scale=1" name="viewport">
+    <meta name="x-apple-disable-message-reformatting">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta content="telephone=no" name="format-detection">
 	<title>UOL</title>
 </head>
 <body>   
@@ -38,7 +42,7 @@
 					</table>
 					<br>
 
-					<table width="600" cellspacing="0" cellpadding="0" align="center" bgcolor="#FFFFFF" style="margin: 0px 0px 0px; background-color: #030A12;margin-left: 20px;
+					<table width="600" cellspacing="0" cellpadding="0" align="center" bgcolor="#FFFFFF" style="margin: 0px 0px 0px; background-color:#040c0f;margin-left: 20px;
 					margin-top: -19px;width: 86.6%;height: 98px;">
 						<tbody>
 							<tr>
@@ -48,7 +52,7 @@
 							</tr>
 						</tbody>
 					</table>
-					<table width="600" cellspacing="0" cellpadding="0" align="center" bgcolor="#FFFFFF" style="margin: 0px 0px 0px; background-color: #030A12;margin-left: 20px;
+					<table width="600" cellspacing="0" cellpadding="0" align="center" bgcolor="#FFFFFF" style="margin: 0px 0px 0px; background-color:#040c0f;margin-left: 20px;
 					margin-top: -19px;width: 86.6%;height: 98px;">
 						<tbody>
 							<tr>
@@ -58,7 +62,7 @@
 							</tr>
 						</tbody>
 					</table>
-					<table width="600" cellspacing="0" cellpadding="0" align="center" bgcolor="#FFFFFF" style="margin: 0px 0px 0px; background-color: #030A12;margin-left: 20px;margin-top: -35px;;width: 86.6%;height: 98px;">
+					<table width="600" cellspacing="0" cellpadding="0" align="center" bgcolor="#FFFFFF" style="margin: 0px 0px 0px; background-color:#040c0f;margin-left: 20px;margin-top: -35px;;width: 86.6%;height: 98px;">
 						<tbody>
 							<tr>
 								<td width="300" align="center">                                    
@@ -69,23 +73,23 @@
 						</tbody>
 					</table>
 
-					<table width="600" cellspacing="0" cellpadding="0" align="center" bgcolor="#FFFFFF" style="margin: 0px 0px 0px; background-color: #030A12;margin-left: 20px;margin-top: -35px;;width: 86.6%;height: 98px;">
+					<table width="600" cellspacing="0" cellpadding="0" align="center" bgcolor="#FFFFFF" style="margin: 0px 0px 0px; background-color:#040c0f;margin-left: 20px;margin-top: -49px;width: 86.6%;height: 98px;">
 						<tbody>
 							<tr>
 								<td width="300" align="center">                                    
 									<img src="../imagens/usa.jpeg" alt="bola" style="margin-left: -55%;">
-									<p style="margin-left: -9%;color:white;margin-top: -28px;font-family: 'Montserrat', sans-serif;font-size: 13px;">Principais campeonatos europeus</p>
+									<p style="margin-left: 6%;color:white;margin-top: -31px;font-family: 'Montserrat', sans-serif;font-size: 13px;">Principais ligas americanas: NBA, NFL, MLB, NHL</p>
 								</td>                                     
 							</tr>
 						</tbody>
 					</table>
 
-					<table width="600" cellspacing="0" cellpadding="0" align="center" bgcolor="#FFFFFF" style="margin: 0px 0px 0px; background-color: #030A12;margin-left: 20px;margin-top: -35px;;width: 86.6%;height: 98px;">
+					<table width="600" cellspacing="0" cellpadding="0" align="center" bgcolor="#FFFFFF" style="margin: 0px 0px 0px; background-color:#040c0f;margin-left: 20px;margin-top: -35px;;width: 86.6%;height: 98px;">
 						<tbody>
 							<tr>
 								<td width="300" align="center">                                    
 									<img src="../imagens/desktop1.jpeg" alt="bola" style="margin-left: -55%;">
-									<p style="margin-left: -9%;color:white;margin-top: -28px;font-family: 'Montserrat', sans-serif;font-size: 13px;">Principais campeonatos europeus</p>
+									<p style="margin-left: 27%;color:white;margin-top: -39px;font-family: 'Montserrat', sans-serif;font-size: 13px;text-align: justify;">Assista onde estiver, pelo seu celular, <br> tablet e computador</p>
 								</td>                                     
 							</tr>
 						</tbody>
