--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 
     <div class="row" id="corpo">
       <div class="col-md-12">
-      <img src="imagens/bg-top.jpg" />
+      <img src="imagens/bg-top.jpg" alt="imagem topo" />
+      <img src="imagens/logos.png" alt="logos Esportes" />
       </div>
     </div> 
 
@@ -39,11 +40,44 @@
       </div>
     </div>
 
-    <div class="row">
+    <div class="row" id="title">
       <div class="col-md-12">
-        <h2> No UOL Esporte Clube você tem:</h2>
+        <p> No UOL Esporte Clube você tem:</p>
+        <p id="extra"> ______ </p>
       </div>
     </div>
+
+    <section class="row">
+      <article class="col-md-6" id="first-card">
+        <img src="imagens/espn.png" alt="logo ESPN" id="espn" />
+        <br>
+        <article id="line-items">
+          <img src="imagens/nfl.png" alt="logo ESPN" id="nfl" />
+          <img src="imagens/nba.jpeg" alt="logo NBA" id="nba" />
+          <img src="imagens/usOpen.png" alt="logo US OPEN" id="usOpen" />
+          <img src="imagens/laLiga.jpeg" alt="logo La Liga" id="laLiga" />
+          <img src="imagens/premierLeague.jpeg" alt="logo Premier League" id="premier" />
+        </article>
+        <article id="last-card">
+          <img src="imagens/watchEspn.jpeg" alt="logo Watch Espn" id="watchEspn" />
+        </article>
+        <p id="text-article">Conteúdo disponível no app >></p>
+      </article>
+
+      <article class="col-md-6" id="second-card">
+        <img src="imagens/esporteInterativo.jpeg" alt="logo esporte interativo" id="espInterativo" />
+        <br>
+        <article id="line-items1">
+          <img src="imagens/champions.jpeg" alt="logo Champions League" id="champions" />
+          <img src="imagens/brasileirao.jpeg" alt="logo Brasileirão 2019" id="brasileirao" />
+        </article>
+        <article id="last-card">
+          <img src="imagens/eplus.jpeg" alt="logo E!Plus" id="eplus" />
+        </article>
+        <p id="text-article">Conteúdo disponível no app >></p>
+      </article>
+
+    </section>
 
     <div class="row" id="footer">
       <div class="col-md-12">
