ajustando icones no topo

--- a/index.html
+++ b/index.html
@@ -21,9 +21,29 @@
     <div class="row" id="corpo">
       <div class="col-md-12">
       <img src="imagens/bg-top.jpg" alt="imagem topo" />
-      <img src="imagens/logos.png" alt="logos Esportes" />
       </div>
-    </div> 
+      <div class="col-md-12">
+        <img src="imagens/logos.png" alt="logos Esportes" id="logos" />
+        <p id="firstText-corpo"> ASSISTA AO VIVO </p>
+        <p id="secondText-corpo"> AOS JOGOS DA NFL</p>
+        <p id="descricao">Com o <strong>UOL Esporte Clube,</strong>você assiste aos principais <br> jogos do Monday Night Football da NFL no <strong>ESPN Play</strong></p>
+        <p id="alert">Próximo jogo</p>
+        <img src="imagens/indio.jpeg" alt="indio - new england" id="indio" />
+        <p id="dateTime"> 11/11 | 11h11</p>
+        <img src="imagens/ico.png" alt="aguia - philadelphia" id="aguia" />
+        <p id="nomeTimeUm"> New England <br>Patriots</p>
+        <p id="nomeTimeDois"> Philadelphia <br>Eagles</p>
+        <p id="alertDois"> X </p>
+        <p id="propaganda"><a href="https://uol.com.br" target="_blank" id="ex"> Experimente 1 mês </a></p>
+        <p id="inform"> Após período, R$24,90 por mês</p>
+      </div>
+    </div>
+    
+    <!--div class="row">
+      <div class="col-md-12">
+        <img src="imagens/logos.png" alt="logos Esportes" />
+      </div>
+    </div-->
 
     <div class="row" id="itens">
       <div class="col-md-4">
