fazendo as alteracoes no corpo do email marketing

--- a/emailMkt/index.html
+++ b/emailMkt/index.html
@@ -8,6 +8,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta content="telephone=no" name="format-detection">
 	<title>UOL</title>
+	<style>
+		#text{
+			text-align: center;
+		}
+	</style>
 </head>
 <body>   
 	<center>        
@@ -95,7 +100,31 @@
 						</tbody>
 					</table>
 
-					<table width="600" cellpadding="0" cellspacing="0" border="0" align="center" bgcolor="#f1f1f1" style="padding:20px 30px;margin-top:10px; margin-right: 92px;">
+					<table width="600" cellspacing="0" cellpadding="0" align="center" bgcolor="#FFFFFF" style="margin: 0px 0px 0px;background-color:#040c0f;margin-left: 20px;margin-top: -2px;width: 86.6%;height: 400px;">
+						<tbody>
+							<tr>
+								<td width="300" align="center">                                    
+									<img src="../imagens/uol.jpeg" alt="bola" style="margin-left: 0%;margin-top: -5%;"> <br><br>
+
+									<table width="600" cellspacing="0" cellpadding="0" align="center" bgcolor="#FFFFFF" style="margin: 0px 0px 0px;background-color: #E1E1E1;margin-left: -2px;margin-top: -56px;width: 43.5%;height: 326px;">
+										<tbody>
+											<tr>
+												<td width="300" align="center">
+													<span><p style="margin-top: 9%;font-size: 22px;font-weight: 600;line-height: 28px;color: #404040;"> ESPN Play <br> + <br> Esporte Interativo Plus <br> + <br> UOL de primeira</p></span>
+													<br>
+													<span><p style="background-color: #e9b426;width: 62%;height: 10%;margin-top: -9%;font-size: 19px;font-weight: 600;color: #404040;padding-top: 8px;"> 23% de desconto </p></span>
+													<span><p style="margin-top: -1%;color: white;background-color: #c23217;width: 86%;height: 11%;/* margin-top: -9%; */font-size: 24px;font-weight: 600;padding-top: 8px;"> Eu quero </p></span>
+												</td>
+											</tr>
+										</tbody>
+									</table>
+									<!--p style="margin-left: 27%;color:white;margin-top: -39px;font-family: 'Montserrat', sans-serif;font-size: 13px;text-align: justify;">Assista onde estiver, pelo seu celular, <br> tablet e computador</p-->
+								</td>                                     
+							</tr>
+						</tbody>
+					</table>
+
+					<table width="600" cellpadding="0" cellspacing="0" border="0" align="center" bgcolor="#f1f1f1" style="padding:20px 30px;margin-top: 0px;margin-right: 92px;/* padding-left: 9%; */margin-left: 2.8%;">
 						<tr>
 							<td align="justify">                                
 								<span style="font-size:13px;color:#696969;font-family:arial, sans-serif;text-align:justify;letter-spacing:1px;">                                    
