--- a/emailMkt/index.html
+++ b/emailMkt/index.html
@@ -127,9 +127,11 @@
 					<table width="600" cellpadding="0" cellspacing="0" border="0" align="center" bgcolor="#f1f1f1" style="padding:20px 30px;margin-top: 0px;margin-right: 92px;/* padding-left: 9%; */margin-left: 2.8%;">
 						<tr>
 							<td align="justify">                                
-								<span style="font-size:13px;color:#696969;font-family:arial, sans-serif;text-align:justify;letter-spacing:1px;">                                    
-									<h4 style="font-family:arial, sans-serif;font-size:13px;">&middot; Privacidade</h4>De acordo com as pr&aacute;ticas de org&atilde;os regulamentadores da pol&iacute;tica da internet, n	&oacute;s mantemos o compromisso de proteger toda a qualquer informa&ccedil;&atilde;o. Tamb&eacute;m n	&atilde;o vendemos ou distribu&iacute;mos seu cadastro a terceiros, em respeito ao consumidor. Esperamos que aproveite nosso informativo.                                    
-									<h4 style="font-family:arial, sans-serif;font-size:13px;">&middot; Atitude Sustent&aacute;vel</h4>N	&atilde;o imprima este e-mail, pense na sua atitude com o meio ambiente. Se achar conveniente repassar o e-mail a algu&eacute;m, encaminhe o mesmo atrav&eacute;s de sua ferramenta de e-mail.                                    <br>
+								<span>     
+									<img src="//host.imguol.com/favicon.ico" alt="logo uol" style="margin-left: 38%;width: 7%;">
+									<p style="margin-left: 46%;margin-top: -6%;font-weight: bolder;font-size: 26px;"> UOL </p>
+									<br>
+									<p style="margin-left: 14%;margin-top: -5%;/* font-weight: bolder; */font-size: 14px;"> E-mail enviado de acordo com o <a href="#"> Guia de Boas Práticas </a> da ABEMD </p>                             
 								</span>                            
 							</td>                        
 						</tr>
